<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/title_update_edittext"
        style="@style/edittext_style"
        android:layout_width="match_parent"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:maxLines="1" />

    <EditText
        android:id="@+id/description_update_edittext"
        style="@style/edittext_style"
        android:layout_width="match_parent"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:maxLines="4" />

    <DatePicker
        android:id="@+id/due_update_datepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:colorControlActivated="@color/brown"
        android:datePickerMode="calendar"
        android:headerBackground="@color/brown"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:spinnersShown="false" />

    <EditText
        android:id="@+id/notes_update_edittext"
        style="@style/edittext_style"
        android:layout_width="match_parent"
        android:hint="@string/notes"
        android:importantForAutofill="no"
        android:maxLines="4" />

    <Button
        android:id="@+id/update_button"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update" />

    <Button
        android:id="@+id/delete_button"
        style="@style/button_style"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_delete"
        android:drawableTint="@color/white"
        android:text="@string/delete" />

</LinearLayout>