<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/title_edittext"
        style="@style/edittext_style"
        android:layout_width="match_parent"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:maxLines="1" />

    <EditText
        android:id="@+id/description_edittext"
        style="@style/edittext_style"
        android:layout_width="match_parent"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:maxLines="4" />

    <DatePicker
        android:id="@+id/due_datepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:calendarViewShown="false"
        android:colorControlActivated="@color/brown"
        android:datePickerMode="calendar"
        android:headerBackground="@color/brown"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:spinnersShown="false" />

    <EditText
        android:id="@+id/notes_edittext"
        style="@style/edittext_style"
        android:layout_width="match_parent"
        android:hint="@string/notes"
        android:importantForAutofill="no"
        android:maxLines="4" />

    <Button
        android:id="@+id/createButton"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create" />

</LinearLayout>